--- a/Ch5/index.html
+++ b/Ch5/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms - Lets learn it</title>
 </head>
+
 <body>
     <h1>Form to apply for Sigma Web Development Course TA</h1>
     <br>
     <form action="post">
-        <label for="username">Enter Your Username</label>
-        <input type="text" id="username" name="username"  placeholder="Enter your username">
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Male</label>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label>  
+        <div>
+            <label for="username">Enter Your Username</label>
+            <input type="text" id="username" name="username" placeholder="Enter your username">
+        </div>
+
+        <div>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Male</label>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label>
+        </div>
+
+        <div>
+            <input type="checkbox" id="subscribe" name="subscribe" value="yes">
+            <label for="subscribe">Subscribe to newsletter</label>
+        </div>
+
+        <div>
+            <label for="comment">Enter your comment</label>
+            <textarea id="comment" name="comment" rows="4" cols="50"></textarea>
+        </div>
+
+        <div><select name="fruits">
+                <option value="apple">Apple</option>
+                <option value="banana">Banana</option>
+                <option value="cherry">Cherry</option>
+            </select></div>
     </form>
 </body>
+
 </html>
