--- a/Quick Quiz 1/index.html
+++ b/Quick Quiz 1/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
 </head>
 <body>
     <h1>UserData</h1>
-    <form action="post"></form>
+    <form></form>
     <div>
     <label for="username">Name</label>
     <input type="text" id="username" name="username" placeholder="Enter your username">
