--- a/Ch10/index.html
+++ b/Ch10/index.html
@@ -15,6 +15,6 @@
     </pre>
     <p>The price is 10 &lt; 20.</p>
     <p>Copyright &copy; 2023.</p>
-    <p>This is an example&nbsp;text.</p>
+    <p>This is an example&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;text.</p>
 </body>
 </html>
