--- a/Ch10/index.html
+++ b/Ch10/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     this is a paragraph &lt;p&gt;&lt;/p&gt;
     <pre>
@@ -16,5 +18,30 @@
     <p>The price is 10 &lt; 20.</p>
     <p>Copyright &copy; 2023.</p>
     <p>This is an example&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;text.</p>
+
+    <blockquote cite="https://example.com">
+        This is a long quote from an external source. This quote can span multiple lines and paragraphs.
+    </blockquote>
+
+    The philosopher said, <q cite="https://example.com">The unexamined life is not worth living.</q>
+
+    <h1>This is HTML Boilerplate code</h1>
+    <pre>
+        <code>
+   &lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Document&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    
+&lt;/body&gt;
+&lt;/html&gt;
+        </code>
+    </pre>
+
 </body>
+
 </html>
