--- a/Ch11/index.html
+++ b/Ch11/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS</title>
+    <style>
+        div,span{
+          color:rgb(170, 0, 0);
+          background-color: yellow;
+            
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        Heyy I am Saumyaa, we will be starting CSS soon!!!
+    </div>
+
+    <div>
+        How are you today?
+    </div>
+
+    <span>
+        I am great.
+    </span>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quisquam dolorum repellat quas voluptate? Totam nostrum fuga natus aliquid accusantium atque culpa ipsam quaerat harum eos similique, voluptas vero minus voluptatem officia voluptatum ad iusto quibusdam quidem quasi? Accusamus dolor nihil ipsa in.</p>
 </body>
 </html>
