--- a/Exercise-1/index.html
+++ b/Exercise-1/index.html
@@ -3,3 +3,36 @@ Design a website using HTML only which shows these 12 files.
 1.mp3, 2.mp3, 3.mp3, 4.mp3, 5.mp3, 6.mp3 
 1.mp4, 2.mp4, 3.mp4, 4.mp4, 5.mp4, 6.mp4
 Show them in preview -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Media Files</title>
+</head>
+<body>
+    <h1>Media Files</h1>
+
+    <h2>Videos of the Day</h2>
+    <div>
+    <video width="239" src="video 2.mp4" controls></video>
+    <video width="239" src="video 1.mp4" controls></video>
+    <video width="239" src="video 3.mp4" controls></video>
+    <video width="239" src="video 4.mp4" controls></video>
+    <video width="239" src="video 5.mp4" controls></video>
+    <video width="239" src="video 6.mp4" controls></video>
+    </div>
+
+    <h2>Audios of the Day</h2>
+    <div>
+    <audio src="audio 1.mp3" controls></audio>
+    <audio src="audio 2.mp3" controls></audio>
+    <audio src="audio 3.mp3" controls></audio>
+    <audio src="audio 4.mp3" controls></audio>
+    <audio src="audio 5.mp3" controls></audio>
+    <audio src="audio 6.mp3" controls></audio>
+    </div>
+
+</body>
+</html>
