--- a/Exercise-2/index.html
+++ b/Exercise-2/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div>p{
+            background-color: blue;
+            color: white;
+        }
+        /* div>p:nth-child(1) */ 
+        /* div p:not(:first-child)  */
+        div>p:first-child{
+            background-color: yellow;
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <!--Write html and css code to style a paragraph inside a div wich contains 5 other paragraphs. The first paragraph must have background color yellow and text color red.The other paragraphs must have background color blue and text color white.The html is written below for your reference.Do not change this html code-->
